feat(#89): ensure permission class and add 401 response code in logout endpoint
